[GStreamer] webkitwebsrc: pad template is leaked https://bugs.webkit.org/show_bug.cgi?id=74224

Patch by Judy Hao <judy.liqiong-hao@nokia.com> on 2012-01-09
Reviewed by Philippe Normand.

Use a GstPadTemplate smart pointer in webkit_web_src_init to
avoid a memory leak.

Fixing memory leaks. So, no new test case is introduced.

* platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
(webkit_web_src_init):

Canonical link: https://commits.webkit.org/92674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104475 268f45cc-cd09-0410-ab3c-d52691b4dbfc